Project puma_website {
  database_type: 'PostgreSQL'
  Note: '''
    # PUMA Website Database Schema
    **Version 1.4**
  '''
}

Table roles {
  id int [pk, increment]
  name varchar [not null]
  created_at datetime [default: `now()`]
  updated_at datetime [default: `now()`]
}

Table users {
    id uuid [pk, increment]
    username varchar [not null, unique]
    password varchar [not null]
    first_name varchar [not null]
    middle_name varchar
    last_name varchar [not null]
    email varchar [not null, unique]
    student_id varchar [unique]
    major varchar [not null]
    role_id int [ref: > roles.id]
    created_at datetime [default: `now()`]
    updated_at datetime [default: `now()`]
}

Table events {
    id int [pk, increment]
    title varchar [not null]
    description varchar [not null]
    date datetime [not null]
    user_id uuid [ref: > users.id]
    created_at datetime [default: `now()`]
    updated_at datetime [default: `now()`]
}

Table news {
    id int [pk, increment]
    title varchar [not null]
    content varchar [not null]
    user_id uuid [ref: > users.id]
    likes int [default: 0]
    created_at datetime [default: `now()`]
    updated_at datetime [default: `now()`]
}

Table permissions {
    id int [pk, increment]
    name varchar [not null]
    created_at datetime [default: `now()`]
    updated_at datetime [default: `now()`]
}

Table role_permissions {
    role_id int [ref: > roles.id]
    permission_id int [ref: > permissions.id]
}

Table event_registrations {
    id int [pk, increment]
    event_id int [ref: > events.id]
    user_id uuid [ref: > users.id]
    registration_date datetime [default: `now()`]
}

Table merch.category {
    id int [pk, increment]
    name varchar [not null]
    created_at datetime [default: `now()`]
    updated_at datetime [default: `now()`]
}

Table merch.product {
    id int [pk, increment]
    title varchar [not null]
    description varchar [not null]
    category_id int [ref: > merch.category.id]
    primary_image varchar [not null]
    created_at datetime [default: `now()`]
    updated_at datetime [default: `now()`]
}

Table merch.size {
    id int [pk, increment]
    name varchar [not null]
    product_id int [ref: > merch.product.id]
    created_at datetime [default: `now()`]
    updated_at datetime [default: `now()`]
}

Table merch.color {
    id int [pk, increment]
    name varchar [not null]
    product_id int [ref: > merch.product.id]
    created_at datetime [default: `now()`]
    updated_at datetime [default: `now()`]
}

Table merch.price {
    id int [pk, increment]
    price decimal [not null]
    product_id int [ref: > merch.product.id]
    size_id int [ref: > merch.size.id]
    color_id int [ref: > merch.color.id]
    created_at datetime [default: `now()`]
    updated_at datetime [default: `now()`]
}

Table merch.transaction {
    id int [pk, increment]
    user_id uuid [ref: > users.id]
    product_id int [ref: > merch.product.id]
    coupon_id int [ref: > merch.coupon.id]
    proof_of_payment varchar [not null]
    status varchar [not null]
    paid_at datetime [default: `now()`]
    created_at datetime [default: `now()`]
    updated_at datetime [default: `now()`]
}

Table merch.image {
    id int [pk, increment]
    path varchar [not null]
    product_id int [ref: > merch.product.id]
    created_at datetime [default: `now()`]
    updated_at datetime [default: `now()`]
}

Table merch.coupon {
    id int [pk, increment]
    code varchar [not null]
    description varchar [not null]
    discount_type varchar [not null]
    discount_value numeric [not null]
    max_use_count int [not null]
    used_count int [default: 0]
    valid_from datetime [not null]
    valid_until datetime [not null]
    created_at datetime [default: `now()`]
    updated_at datetime [default: `now()`]
}